# dotnet-wasm-component-experiment

./: .gitignore  README.md  calculator.sln  wasi_snapshot_preview1.command.wasm
Adder/: Adder.csproj  calculator.wit
MyApp/: MyApp.csproj  Program.cs
rust-host/: Cargo.toml  build.cmd  spin.toml
rust-host/src/: lib.rs
