[package]
name = "my-rust-app"
authors = ["thangchung <thangchung@nomail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
wit-bindgen = "0.13.1"
bytes = "1"
serde = { version = "1.0.173", features = ["serde_derive"] }
serde_qs = "0.12.0"

[package.metadata.component.target]
path = "calculator.wit"
world = "hostapp"
